bugfix: linebreaks on <a> in mobile view

--- a/style.css
+++ b/style.css
@@ -16,6 +16,17 @@ h4{
     font-size: calc(14pt);
 }
 
+a {
+    color: inherit;
+    text-decoration: inherit;
+}
+
+a[href*="//"]:not([href*="magniswerfer.github.io"]) {
+    /* external link styles, use :before or :after if you want! */
+    color: blue;
+    text-decoration: underline;
+}
+
 :root {
     --light: white;
     --dark: black;
@@ -59,17 +70,6 @@ body {
     font-size: 8pt;
     padding-left: 5px;
     flex-shrink: 0;
-}
-
-a {
-    color: inherit;
-    text-decoration: inherit;
-}
-
-a[href*="//"]:not([href*="magniswerfer.github.io"]) {
-    /* external link styles, use :before or :after if you want! */
-    color: blue;
-    text-decoration: underline;
 }
 
 /*  NAVIGATION   */
@@ -186,7 +186,6 @@ nav{
     }
 
     a{
-        display: block;
         width: 100%;
         margin-left:0;
         margin-right:0;
